some minor changes

--- a/about.html
+++ b/about.html
@@ -109,6 +109,7 @@
     <body>
         <nav>
             <ul>
+                <li><a href='https://liyunze-coding.github.io/portfolio/about'>English</a></li>
                 <li><a href='./'>主页</a></li>
                 <li><a href  class='active'>关于</a></li>
                 <li><a href='./skills.html'>技能</a></li>
@@ -124,7 +125,7 @@
                 <br><br>
                 我13岁的时候，我的父母送我去学电脑编程<span class="english-text">(Programming)</span>。
                 <br><br>
-                我一开始学编程的时候，我没那么兴趣因为我只学会用Python来画些形状，学些简单的概念。
+                我一开始学编程的时候，我没那么兴趣因为我只学会用<span class="english-text">Python</span>来画些形状，学些简单的概念。
                 学了几个月后，开始闷了。
                 <br><br>
                 有一天，我发现到编程不一定要那么闷。我可以自己上网找些资源，自由地选择我要学的东西。从那天以后，我开始对编程有兴趣。
@@ -137,7 +138,7 @@
                 在中学时，大多数学生都知道我对编程有兴趣。我在那间学校除了当了电脑技术俱乐部的总统以外，还当了级长部的电脑技术经理。
                 在那里，我学会了如何组织活动，与同事沟通和团队合作的重要性。
                 <br><br>
-                我会尽力地学会更多东西，学会当一名有资格的编程员。
+                我会尽力地学会更多东西，将来当一名有资格的编程员。
             </p>
             <br>
             <h3>联络</h3>
@@ -154,7 +155,7 @@
             <input type="text" name="subject" class="subject" placeholder="科目">
             
             <label for="Message">信息<span style='color:red'>*</span></label>
-            <textarea id="message" name='message' class='message' placeholder="写些东西。。。" style="height:200px;font-family:montserrat"></textarea>
+            <textarea id="message" name='message' class='message' placeholder="写些东西. . . . . ." style="height:200px;font-family:montserrat"></textarea>
             
             <input type="submit" value="提交" class='submit' style='color:white;'>
             <br><br>
