--- a/skills.html
+++ b/skills.html
@@ -72,7 +72,7 @@
                 await move('loader');
                 $(".loader-wrapper").fadeOut('fast');
                 enableScroll();
-                consoleText(['技能', '你好世界！','编程', '视频创作', '检查元素', '网页设计','我是莱恩'], 'text',['#fff','#00fbff','#1cff00', '#00fbff', '#f0db4f','#db59ff','#c06dff']);
+                consoleText(['我的技能', '你好世界！','编程', '视频创作', '检查元素', '网页设计','直播'], 'text',['#fff','#00fbff','#1cff00', '#00fbff', '#f0db4f','#db59ff','#c06dff']);
             });
         </script>
         <style>
@@ -226,6 +226,7 @@
     <body>
         <nav>
             <ul>
+                <li><a href='https://liyunze-coding.github.io/portfolio/'>English</a></li>
                 <li><a href='./'>主页</a></li>
                 <li><a href='./about.html'>关于</a></li>
                 <li><a href class='active'>技能</a></li>
@@ -242,7 +243,7 @@
                 </h2>
                 
                 <p class="paragraphs">
-                    我<span class='english-text'>Python</span>方面的经验比<span class='english-text'>Javascript</span>多。
+                    我喜欢用<span class='english-text'>Python</span>方面的经验比<span class='english-text'>Javascript</span>多。
                     我用<span class='english-text'>Python</span>来做些自动化和影像处理的项目；用<span class='english-text'>Javascript</span>来做后端编码和网页设计。
                     <br><br>
                     我的工作经验大部分是做些顾客要求的产品，如：<span class='english-text'>Discord bot</span>和<span class='english-text'>Twitch extension</span>。
