--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         <div class='menuItems'>
             <nav>
                 <ul>
+                    <li><a href="https://liyunze-coding.github.io/portfolio/" class="eng-ver">English</a></li>
                     <li><a href class='active'>主页</a></li>
                     <li><a href='./about.html'>关于</a></li>
                     <li><a href='./skills.html'>技能</a></li>
