--- a/projects.html
+++ b/projects.html
@@ -151,6 +151,7 @@
         </div>
         <nav>
             <ul>
+                <li><a href='https://liyunze-coding.github.io/portfolio/'>English</a></li>
                 <li><a href='./'>主页</a></li>
                 <li><a href='./about.html'>关于</a></li>
                 <li><a href='./skills.html'>技能</a></li>
