--- a/about.html
+++ b/about.html
@@ -98,7 +98,16 @@
             @media screen and (max-width: 700px){
                 .card{
                     width:95%;
+                    font-size:15px;
                 }
+                .english-text{
+                    font-size:12px;
+                }
+
+                h1{
+                    font-size:30px;
+                }
+
                 #pfp{
                     width:280px;
                 }
