--- a/projects.html
+++ b/projects.html
@@ -142,12 +142,19 @@
                     position:relative;
                     height:fit-content;
                 }
+
+                .project-description{
+                    font-size:15px;
+                }
+                .english-text{
+                    font-size:12px;
+                }
             }
         </style>
     </head>
     <body oncontextmenu="return false;">
         <div id='clickToContinue'>
-            <div id='click-text'>Click here to continue</div>
+            <div id='click-text'>点击此处</div>
         </div>
         <nav>
             <ul>
