--- a/projects.html
+++ b/projects.html
@@ -175,7 +175,7 @@
                 </a>
                 
                 <p class='project-description'>
-                    这机器人可以在‘人体基准’的猩猩测试中破纪录。使用<span class="english-text">PIL</span>, <span class="english-text">OpenCV</span>处理影像，<span class="english-text">PyAutoGUI</span>来鼠标点击。
+                    这机器人可以在人体基准的猩猩测试中破纪录。使用<span class="english-text">PIL</span>, <span class="english-text">OpenCV</span>处理影像，<span class="english-text">PyAutoGUI</span>来鼠标点击。
                 </p>
                 <br><br>
                 <div class='tags'>
@@ -194,7 +194,7 @@
                 </a>
                 
                 <p class='project-description'>
-                    这机器人可以在‘人体基准’的视觉记忆力测试破纪录。使用<span class="english-text">PIL</span>, <span class="english-text">OpenCV</span>处理影像，以及<span class="english-text">PyAutoGUI</span>来鼠标点击。
+                    这机器人可以在人体基准的视觉记忆力测试破纪录。使用<span class="english-text">PIL</span>, <span class="english-text">OpenCV</span>处理影像，以及<span class="english-text">PyAutoGUI</span>来鼠标点击。
                 </p>
                 <br><br>
                 <div class='tags'>
@@ -212,7 +212,7 @@
                     </video>
                 </a>
                 <p class='project-description'>
-                    这机器人可以在‘人体基准’的语言记忆力测试中破纪录。使用<span class="english-text">Selenium</span>拿取显示的词语和按键。
+                    这机器人可以在人体基准的语言记忆力测试中破纪录。使用<span class="english-text">Selenium</span>拿取显示的词语和按键。
                 </p>
                 <br><br>
                 <div class='tags'>
