--- a/skills.html
+++ b/skills.html
@@ -168,7 +168,7 @@
             }
 
             .magentaText{
-                color:#ff7bb8;
+                color:#db59ff;
             }
 
             .purpleText{
@@ -281,8 +281,8 @@
                         <div class='item-name english-text'>HTML</div>
                     </div>
                     <div class='cyan item'>
-                        <img class='icon-img' src="./static/images/cpp.png">
-                        <div class='item-name english-text'>C++</div>
+                        <img class='icon-img' src="./static/images/R.png">
+                        <div class='item-name english-text'>R</div>
                     </div>
                 </div>
                 <br>
